apps/tend-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tend-website
  namespace: apps
  labels:
    app: tend-website
spec:
  type: ClusterIP
  selector:
    app: tend-website
  ports:
    - name: http
      port: 80
      targetPort: http
